# Git

./: .dockerignore  .gitignore  .gitlab-ci.yml  1-fst_deposit_message.out  2-invalid_external_message.out  3-snd_deposit_message.out  4-transfer-1.out  4-transfer-2.out  4-transfer.out  4-valid_external_message.out  5-withdrawal.out  CHANGES.rst  CODEOWNERS  Dockerfile  ListOfUint8.js  MR.md  Makefile  README.md  accounts.json  active_protocol_versions  after.txt  arvid.yml  before.txt  build.Dockerfile  cnt.tz  config.yaml  default.nix  demo-dac_pk  demo-installer-computed.wasm  dune  dune-project  etherlink.mk  evm.csv  evm_kernel_profile_01.out.txt  evm_kernel_profile_02.out.txt  foo.wast  import.ml  kate-amortized.opam  kernels.mk  logs.txt  (+55 more)
contrib/mir/: .gitignore  Cargo.toml  Makefile  README.md
contrib/mir/docs/: testing-with-deployment.md
contrib/mir/src/: ast.rs  context.rs  gas.rs  interpreter.rs  irrefutable_match.rs  lexer.rs  lib.rs  main.rs  parser.rs  rollup.rs  rollup_util.rs  stack.rs  syntax.lalrpop  typechecker.rs  tzt.rs  util.rs
contrib/mir/src/ast/: annotations.rs  big_map.rs  bytes.rs  comparable.rs  micheline.rs  michelson_address.rs  michelson_key.rs  michelson_lambda.rs  michelson_list.rs  michelson_signature.rs  overloads.rs  typechecked.rs
contrib/mir/src/bls/: g2.rs  pairing.rs
contrib/mir/src/parser/: macros.rs
contrib/mir/src/rollup/: demo.rs  kernel.rs  types.rs
contrib/mir/src/rollup_util/: log.rs  storage.rs
contrib/mir/src/serializer/: decode.rs  encode.rs  integration_tests.rs
contrib/mir/src/typechecker/: type_props.rs
contrib/mir/src/tzt/: expectation.rs
contrib/mir/tzt_runner/: main.rs
contrib/tezos-rust-sdk/codec/: Cargo.toml
etherlink/bin_consensus_node/: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
etherlink/bin_consensus_node/docs/: api.md  config.md  dsn.md
etherlink/bin_consensus_node/e2e-tests/: Cargo.toml  single_node_echo.rs
etherlink/bin_consensus_node/proto/: dsn.proto
scripts/1mtps-demo/txns-gen/: Cargo.toml  generate.sh
src/bin_simulator/: config.ml  display.ml  dune  mocked_protocol.ml  proto_activation.ml  simulator.ml  springmodel.ml  springmodel.mli
src/bin_validation/: dune  validator.ml
src/dac_sample_kernel/: Cargo.toml  dac_sample_kernel.wasm  installer.hex
src/dac_sample_kernel/payloads/: canto_1
src/dac_sample_kernel/src/: dac_message.rs  lib.rs
src/kernel_evm/kernel_min/: Cargo.toml  README.md
src/kernel_sdk/installer_client/: Cargo.toml
src/kernel_sdk/installer_config/: Cargo.toml
src/kernel_tx_demo/: Cargo.toml  Makefile
src/kernel_tx_demo/collector/: Cargo.toml
src/kernel_tx_demo/kernel/: Cargo.toml
src/kernel_tx_demo/src/: lib.rs  storage.rs
src/lib_bls12_381_polynomial/: bls12_381_polynomial.ml  bls12_381_polynomial.mli  bls12_381_polynomial_internal.c  bls12_381_polynomial_internal.h  caml_bls12_381_polynomial_internal_polynomial_stubs.c  caml_bls12_381_polynomial_internal_srs_stubs.c  carray.ml  domain.ml  dune  ec_carray.ml  evaluations.ml  fr_carray.ml  octez_bls12_381_polynomial.mli  polynomial.ml  srs.ml
src/lib_bls12_381_polynomial/test/: dune  helpers.ml  main.ml  test_coefficients.ml  test_domains.ml  test_evaluations.ml  test_fft.ml  test_polynomial.ml  test_srs.ml
src/lib_client/: .ocamlformat  client_keys.ml  dune
src/lib_client_entrypoints/: client_entrypoint.ml  client_entrypoints.ml  client_keys_entrypoints.ml  dune  dune-project
src/lib_mir/prototype/: Cargo.toml  README.md  build.rs
src/proto_007_PsDeLphi/bin_baker/: dune  tezos-baker-007-PsDeLphi.opam
src/proto_007_PsDeLphi/lib_client/: client_proto_args.ml  client_proto_context.ml  dune  tezos-client-007-PsDeLphi.opam
src/proto_007_PsDeLphi/lib_client_commands/: client_proto_context_commands.ml  dune  tezos-client-007-PsDeLphi-commands-registration.opam  tezos-client-007-PsDeLphi-commands.opam
src/proto_007_PsDeLphi/lib_delegate/: dune  tezos-accuser-007-PsDeLphi-commands.opam  tezos-baking-007-PsDeLphi-commands.opam  tezos-baking-007-PsDeLphi.opam  tezos-endorser-007-PsDeLphi-commands.opam
src/proto_007_PsDeLphi/lib_mempool/: dune  tezos-mempool-007-PsDeLphi.opam
src/proto_012_PrwXhpab/bin_baker/: dune  tezos-baker-012-PrwXhpab.opam
vendors/: README.md  plonk.opam
vendors/flextesa-lib/: tezos_protocol.ml
vendors/irmin-pack/: irmin_pack.ml
vendors/kate-amortized/: README.md  dune  kate_amortized.ml  reed_solomon.ml
vendors/kate-amortized/test/: dune  main.ml  test_kate_amortized.ml  test_reed_solomon.ml
vendors/ocaml-chia-vdf/: .ocamlformat  README.md  dune-project  vdf.opam
vendors/ocaml-chia-vdf/src/: binding_interface_stubs.cpp  dune  vdf.ml  vdf.mli
vendors/ocaml-chia-vdf/test/: dune  test.ml
vendors/ott/: ott.opam
vendors/ott/src/: Makefile  auxl.ml  dependency.ml  embed_pp.ml  grammar_pp.ml  main.ml  michelson_specific.ml  system_pp.ml  system_pp.mli  types.ml
vendors/plonk/: circuit.ml  dune  encodings.ml  evaluations_map.ml  fr_generation.ml  kzg.ml  kzg_pack.ml  list.ml  main_protocol.ml  misc.ml  misc.mli  multicore.ml  multicore.mli  multivariate_polynomials.ml  pack.ml  plookup_protocol.ml  polynomial_protocol.ml  sMap.ml  utils.ml
vendors/plonk/gates/: custom_gate.ml  permutation_gate.ml  plookup_gate.ml
vendors/plonk/polynomial/: carray.ml  domain.ml  dune  evaluations.ml  evaluations_c.ml  fr_generation.ml  multivariate.ml  polynomial_c.ml  univariate.ml
vendors/plonk/test/: dune  helpers.ml  main.ml  test_circuit.ml  test_coefficients.ml  test_evaluations.ml  test_kzg.ml  test_kzg_pack.ml  test_list.ml  test_main_protocol.ml  test_multivariate_polynomials.ml  test_pack.ml  test_permutations.ml  test_plookup.ml  test_polynomial_c.ml  test_polynomial_protocol.ml  test_ultra_protocol.ml  test_utils.ml
vendors/tezt/: .gitignore  .gitlab-ci.yml  CHANGES.md  LICENSE  README.md  dune-project  tezt.opam
vendors/tezt/lib/: dune  main.ml  process.ml
vendors/tezt/lib_core/: base.mli  cli.ml  cli.mli  coverage_input.ml  coverage_input.mli  dune  log.ml  log.mli  test.ml  test.mli
vendors/tezt/lib_js/: dune  main.ml
(+11500 files in other folders)
