opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Nomadic Labs Privacy Team" ]
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/privacy-team.git"
homepage: "git+https://gitlab.com/nomadic-labs/privacy-team.git"
license: "MIT"
depends: [
  "dune" { >= "2.0" }
  "bls12-381" { >= "3.0.2" }
  "data-encoding"
  "alcotest" { with-test & >= "1.1.0" }
  "qcheck-alcotest" { with-test }
  "bisect_ppx" { with-test }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "test" "-p" name "-j" jobs] {with-test}
]
synopsis: "Plonk zero-knowledge proving system"
