[package]
name = "mir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sandbox"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
num-bigint = "0.3.3"
tezos_data_encoding = "0.5.1"
tezos_crypto_rs = "0.5.1"
tezos-smart-rollup = "0.2.1"
tezos-smart-rollup-encoding = "0.2.1"
tezos-smart-rollup-mock = "0.2.1"
