(library
 (name tezos_validator)
 (public_name tezos-validator)
 (libraries tezos-base
            tezos-storage
            tezos-stdlib-unix
            tezos-shell
            tezos-shell-services
            tezos-validation
            tezos-protocol-updater
            tezos-shell-context
            tezos-embedded-protocol-001-PtCJ7pwo
            tezos-embedded-protocol-002-PsYLVpVv
            tezos-embedded-protocol-003-PsddFKi3
            tezos-embedded-protocol-004-Pt24m4xi
            tezos-embedded-protocol-000-Ps9mPmXa)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_storage
                   -open Tezos_stdlib_unix
                   -open Tezos_shell
                   -open Tezos_shell_services
                   -open Tezos_validation
                   -open Tezos_protocol_updater
                   -open Tezos_shell_context
                   -linkall))
 (modules Validator))

(executable
 (name main_validator)
 (public_name tezos-validator)
 (libraries tezos_validator)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_storage
                   -open Tezos_stdlib_unix
                   -open Tezos_shell
                   -open Tezos_shell_services
                   -open Tezos_validation
                   -open Tezos_protocol_updater
                   -open Tezos_validator
                   -linkall))
 (modules Main_validator))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action
  (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
