[package]
name = "dac-sample-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "6.1"
thiserror = "1.0"
hex = "0.4"
rlp = "0.5.2"

tezos_data_encoding = "0.4"
tezos_crypto_rs = {version = "0.4", default-features = false }

primitive-types = { version = "0.11.1", default-features = false }

[dependencies.tezos_smart_rollup_core]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_host]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_debug]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_encoding]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_entrypoint]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_mock]
git = "https://gitlab.com/tezos/tezos"
optional = true

[features]
default = []
testing = []

