# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "tx_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "6.1"
thiserror = "1.0"
hex = "0.4"
num-bigint = "0.3"
num-traits = "0.2.8"

tezos_data_encoding = "0.4"
tezos_crypto_rs = { version = "0.4", default-features = false }

# Adding these to 'dev_dependencies' causes the rand feature in crypto to be enabled
# on wasm builds, when building the entire workspace.
rand = { version = "0.8", optional = true }
proptest = { version = "1.0", optional = true }

[dependencies.tezos-smart-rollup-core]
path = "../kernel_sdk/core"

[dependencies.tezos-smart-rollup-host]
path = "../kernel_sdk/host"

[dependencies.tezos-smart-rollup-debug]
path = "../kernel_sdk/debug"

[dependencies.tezos-smart-rollup-entrypoint]
path = "../kernel_sdk/entrypoint"

[dependencies.tezos-smart-rollup-storage]
path = "../kernel_sdk/storage"

[dependencies.tezos-smart-rollup-encoding]
path = "../kernel_sdk/encoding"

[dev-dependencies.tezos-smart-rollup-mock]
path = "../kernel_sdk/mock"

[features]
default = ["tx-kernel"]
testing = [
  "rand",
  "proptest",
  "tezos-smart-rollup-entrypoint/testing",
  "tezos-smart-rollup-host/testing",
  "tezos-smart-rollup-encoding/testing",
  "tezos_crypto_rs/std"
]
tx-kernel = []
tx-kernel-no-sig-verif = ["tx-kernel"]
