(library
 (name tezos_client_mid)
 (public_name tezos-client-mid)
(libraries tezos-base
           tezos-client-base
           tezos-signer-backends
           data-encoding)
 (library_flags
  (:standard -linkall))
 (flags
  (:standard
    -open Tezos_base__TzPervasives
    -open Tezos_rpc
    -open Tezos_client_base
    -open Data_encoding))
)

(alias
 (name runtest_lint)
 (deps
  (glob_files *.ml{,i}))
 (action
  (run %{lib:tezos-tooling:lint.sh} %{deps})))
