# SPDX-FileCopyrightText: 2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "tezos_smart_rollup_installer"
version = "0.1.0"
edition = "2021"
authors = ["TriliTech <contact@trili.tech>"]
include = ["build.rs", "src/*", "../installer_kernel/src/*"]

[[bin]]
name = "smart-rollup-installer"
path = "src/main.rs"

[dependencies.blst]
version = "0.3.10"
features = ["portable"]

[dependencies.tezos_smart_rollup_encoding]
path = "../tezos_smart_rollup_encoding"

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.hex]
version = "0.4"

[dependencies.thiserror]
version = "1.0"

[dependencies.wasm-gen]
version = "0.1.4"

[dependencies.installer_config]
path = "../installer_config"

[dependencies.tezos_data_encoding]
version = "0.4"

[dependencies.tezos_smart_rollup_host]
path = "../tezos_smart_rollup_host"

[dependencies.serde_yaml]
version = "0.9"
