[package]
name = "installer_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

tezos_data_encoding = "0.4"
tezos_data_encoding_derive = { version = "0.4" }

[dependencies.tezos_smart_rollup_host]
path = "../tezos_smart_rollup_host"
default-features = false

[dependencies.tezos_smart_rollup_core]
path = "../tezos_smart_rollup_core"
default-features = false

[dependencies.nom]
version = "6.1"
default-features = false

[dependencies.tezos_data_encoding]
version = "0.4"
optional = true

[dependencies.tezos_data_encoding_derive]
version = "0.4"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.hex]
version = "0.4.3"
optional = true

[dependencies.tezos_crypto_rs]
version = "0.4"
default-features = false
optional = true

[dependencies.thiserror]
version = "1.0"
optional = true

[features]
default = ["std"]
std = ["alloc"]
alloc = [
    "tezos_data_encoding",
    "tezos_data_encoding_derive",
    "serde",
    "serde_yaml",
    "hex",
    "tezos_crypto_rs",
    "thiserror",
]
testing = []
