[package]
name = "prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
num-bigint = "0.4"
ascii = "1.1"
hex = "0.4"
seq-macro = "0.3"
derive-where = "1"
