(library
 (name tezos_client_007_PsDeLphi)
 (public_name tezos-client-007-PsDeLphi)
 (libraries tezos-base
            tezos-protocol-007-PsDeLphi
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-007-PsDeLphi-parameters)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_007_PsDeLphi
                   -open Tezos_protocol_007_PsDeLphi_parameters
                   -open Tezos_rpc)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
