(library
 (name tezos_baking_007_PsDeLphi)
 (public_name tezos-baking-007-PsDeLphi)
 (libraries tezos-base
            tezos-version
            tezos-protocol-007-PsDeLphi
            tezos-protocol-environment
            tezos-shell-context
            tezos-shell-services
            tezos-client-base
            tezos-client-007-PsDeLphi
            tezos-client-commands
            tezos-stdlib-unix
            tezos-storage
            tezos-rpc-http
            tezos-rpc
            lwt-canceler)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_PsDeLphi
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_007_PsDeLphi
                   -open Tezos_client_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_context
                   -open Tezos_storage
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_007_PsDeLphi_commands)
 (public_name tezos-baking-007-PsDeLphi-commands)
 (libraries tezos-base
            tezos-protocol-007-PsDeLphi
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-007-PsDeLphi
            tezos-client-commands
            tezos-baking-007-PsDeLphi)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_PsDeLphi
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_007_PsDeLphi
                   -open Tezos_client_commands
                   -open Tezos_baking_007_PsDeLphi
                   -open Tezos_rpc)))

(library
 (name tezos_baking_007_PsDeLphi_commands_registration)
 (public_name tezos-baking-007-PsDeLphi-commands.registration)
 (libraries tezos-base
            tezos-protocol-007-PsDeLphi
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-007-PsDeLphi
            tezos-client-commands
            tezos-baking-007-PsDeLphi
            tezos-baking-007-PsDeLphi-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_PsDeLphi
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_007_PsDeLphi
                   -open Tezos_client_commands
                   -open Tezos_baking_007_PsDeLphi
                   -open Tezos_baking_007_PsDeLphi_commands
                   -open Tezos_rpc)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
