; build static executable with --profile static
(env
 (static
  (flags (:standard
           -ccopt -static
           -cclib "-lusb-1.0 -lhidapi-libusb -ludev"))))

(executable
 (name main_baker_012_PrwXhpab)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baker-012-PrwXhpab)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-012-PrwXhpab-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_012_PrwXhpab
                   -open Tezos_client_012_PrwXhpab
                   -open Tezos_client_commands
                   -open Tezos_baking_012_PrwXhpab_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))
